kubernetes/apps/network/envoy-gateway/config/gateway.yaml
---
# yaml-language-server: $schema=https://schemas.tholinka.dev/gateway.networking.k8s.io/gatewayclass_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: config
    namespace: network
---
# yaml-language-server: $schema=https://schemas.tholinka.dev/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
  labels:
    type: internal
  annotations:
    external-dns.alpha.kubernetes.io/target: &hostname internal.${SECRET_DOMAIN}
spec:
  gatewayClassName: envoy
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: *hostname
      lbipam.cilium.io/ips: 10.0.20.249,::ffff:10.0.20.249
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: '*.${SECRET_DOMAIN}'
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      hostname: '*.${SECRET_DOMAIN}'
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: ${SECRET_DOMAIN/./-}-production-tls
---
# yaml-language-server: $schema=https://schemas.tholinka.dev/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external
  labels:
    type: external
  annotations:
    external-dns.alpha.kubernetes.io/target: &hostname external.${SECRET_DOMAIN}
spec:
  gatewayClassName: envoy
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: *hostname
      lbipam.cilium.io/ips: 10.0.20.247,::ffff:10.0.20.247
  listeners:
    - name: http-domain-1
      protocol: HTTP
      port: 80
      hostname: '*.${SECRET_DOMAIN}'
      allowedRoutes:
        namespaces:
          from: Same
    - name: https-domain-1
      protocol: HTTPS
      port: 443
      hostname: '*.${SECRET_DOMAIN}'
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: ${SECRET_DOMAIN_2/./-}-production-tls
    - name: http-domain-2
      protocol: HTTP
      port: 80
      hostname: '*.${SECRET_DOMAIN_2}'
      allowedRoutes:
        namespaces:
          from: Same
    - name: https-domain-2
      protocol: HTTPS
      port: 443
      hostname: '*.${SECRET_DOMAIN_2}'
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: ${SECRET_DOMAIN_2/./-}-production-tls
---
# yaml-language-server: $schema=https://schemas.tholinka.dev/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external-root
  labels:
    type: external
  annotations:
    external-dns.alpha.kubernetes.io/target: &hostname external.${SECRET_DOMAIN}
spec:
  gatewayClassName: envoy
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: *hostname
      lbipam.cilium.io/ips: 10.0.20.248,::ffff:10.0.20.248
  listeners:
    - name: http-root
      protocol: HTTP
      port: 80
      hostname: '${SECRET_DOMAIN}'
      allowedRoutes:
        namespaces:
          from: Same
    - name: https-root
      protocol: HTTPS
      port: 443
      hostname: '${SECRET_DOMAIN}'
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: ${SECRET_DOMAIN/./-}-production-tls
